// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`快照测试 focused=end 1`] = `
<div
  className="sc-jRQBWg jpEcvy sinoui-date-range-view-toolbar"
>
  <div
    className="sc-gKclnd eCRbOS"
  >
    <button
      className="sc-bdvvtL eqWEUT sinoui-base-button sc-hKwDye iuoEFl sinoui-icon-button sinoui-icon-button--dense"
      color="textSecondary"
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-eCImPb gizrW sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
    <div
      className="sc-gKclnd eCRbOS"
    >
      <button
        className="sc-bdvvtL eqWEUT sinoui-base-button sc-gsDKAQ hpPSWF sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        清除
      </button>
      <button
        className="sc-bdvvtL eqWEUT sinoui-base-button sc-gsDKAQ hpPSWF sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        保存
      </button>
    </div>
  </div>
  <p
    className="sc-dkPtRN euzasc sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  />
  <h5
    className="sc-dkPtRN scNXs sinoui-typography sinoui-typography--h5 sinoui-date-range-view-toolbar__selected-date"
    color="textPrimary"
    type="h5"
  >
    <span
      className="sc-iCfMLu dTLiKD"
      onClick={[Function]}
    >
      开始时间
    </span>
    -
    <span
      className="sc-iCfMLu jgyJvb"
      onClick={[Function]}
    >
      结束时间
    </span>
  </h5>
</div>
`;

exports[`快照测试 focused=start 1`] = `
<div
  className="sc-jRQBWg jpEcvy sinoui-date-range-view-toolbar"
>
  <div
    className="sc-gKclnd eCRbOS"
  >
    <button
      className="sc-bdvvtL eqWEUT sinoui-base-button sc-hKwDye iuoEFl sinoui-icon-button sinoui-icon-button--dense"
      color="textSecondary"
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-eCImPb gizrW sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
    <div
      className="sc-gKclnd eCRbOS"
    >
      <button
        className="sc-bdvvtL eqWEUT sinoui-base-button sc-gsDKAQ hpPSWF sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        清除
      </button>
      <button
        className="sc-bdvvtL eqWEUT sinoui-base-button sc-gsDKAQ hpPSWF sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        保存
      </button>
    </div>
  </div>
  <p
    className="sc-dkPtRN euzasc sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  />
  <h5
    className="sc-dkPtRN scNXs sinoui-typography sinoui-typography--h5 sinoui-date-range-view-toolbar__selected-date"
    color="textPrimary"
    type="h5"
  >
    <span
      className="sc-iCfMLu jgyJvb"
      onClick={[Function]}
    >
      开始时间
    </span>
    -
    <span
      className="sc-iCfMLu dTLiKD"
      onClick={[Function]}
    >
      结束时间
    </span>
  </h5>
</div>
`;

exports[`快照测试 渲染 1`] = `
<div
  className="sc-jRQBWg jpEcvy sinoui-date-range-view-toolbar"
>
  <div
    className="sc-gKclnd eCRbOS"
  >
    <button
      className="sc-bdvvtL eqWEUT sinoui-base-button sc-hKwDye iuoEFl sinoui-icon-button sinoui-icon-button--dense"
      color="textSecondary"
      role="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-eCImPb gizrW sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
    <div
      className="sc-gKclnd eCRbOS"
    >
      <button
        className="sc-bdvvtL eqWEUT sinoui-base-button sc-gsDKAQ hpPSWF sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        清除
      </button>
      <button
        className="sc-bdvvtL eqWEUT sinoui-base-button sc-gsDKAQ hpPSWF sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        保存
      </button>
    </div>
  </div>
  <p
    className="sc-dkPtRN euzasc sinoui-typography sinoui-typography--caption"
    color="textPrimary"
    type="caption"
  />
  <h5
    className="sc-dkPtRN scNXs sinoui-typography sinoui-typography--h5 sinoui-date-range-view-toolbar__selected-date"
    color="textPrimary"
    type="h5"
  >
    <span
      className="sc-iCfMLu dTLiKD"
      onClick={[Function]}
    >
      开始时间
    </span>
    -
    <span
      className="sc-iCfMLu dTLiKD"
      onClick={[Function]}
    >
      结束时间
    </span>
  </h5>
</div>
`;
